tests/snapshots/run_wpt_conformance__coreml_ceil_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
ceil.https.any.js ceil float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983265326_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([54, 84, 153, 80, 50, 86, 166, 205, 22, 80, 108, 76, 162, 69, 124, 74, 50, 85, 83, 207, 246, 76, 20, 84, 148, 78, 18, 78, 13, 210, 158, 197, 177, 83, 125, 213, 91, 84, 1, 69, 70, 85, 178, 200, 247, 206, 93, 208]);
  }

  nodes {
    [ceilOutput] = ceil(operand_0, label="");
  }

  outputs { ceilOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983265326_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
